--- a/package.json
+++ b/package.json
@@ -22,23 +22,23 @@
     "express": "^4.15.3",
     "node-cron": "^1.2.0",
     "prop-types": "^15.5.9",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0",
-    "webpack": "^4.16.1",
-    "webpack-cli": "^3.0.8"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "webpack": "^4.28.2",
+    "webpack-cli": "^3.2.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^7.1.5",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "compression-webpack-plugin": "^0.4.0",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "compression-webpack-plugin": "^2.0.0",
     "css-loader": "^0.26.4",
     "enzyme": "^2.4.1",
     "eslint": "^3.4.0",
